--- a/css/style.css
+++ b/css/style.css
@@ -1298,6 +1298,10 @@ margin-top: 25px;
         align-items: center;
 
     }
+    .jennifer,
+    .woody {
+        display: none;
+    }
     .arrow-item {
         display: none;
     }
@@ -1378,6 +1382,10 @@ margin-top: 25px;
 .location-h2 {
     width: auto;
     
+}
+.img-local {
+    margin-left: 12px;
+    margin-right: 15px;
 }
 .location-list {
     display: flex;
