--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@ margin-top: 25px;
         text-align: left;
     }
     .pets-friends {
-        width: 100%;
+        max-width: 568px;
     }
     .pets-container {
         width: 100%;
