--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+body {
+    overflow-x: hidden;
+}
 
 ul, li {
     list-style: none;
