--- a/css/style.css
+++ b/css/style.css
@@ -666,6 +666,18 @@ max-width: 1280px;
     .our-pets {
         width: 100%;
     }
+    .pets-container{
+        display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width: auto;
+    
+    }
+    .pets-griend-h3 {
+        margin: 0px 0px 60px 0px;
+    }
 }
 
 @media(max-width:760px) {
