--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,19 @@
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+   /* overflow-x: hidden;*/
 }
+
 body {
     overflow-x: hidden;
+   
 }
 
 ul, li {
     list-style: none;
     text-align: left;
 }
-header {
-    background: url(../img/start-screen-gradient-background.svg), radial-gradient(100% 900% at 0% 0%, #5b483a 0%, #262425 100%), linear-gradient(0deg, #211f20, #211f20);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.header-box {
-    width: auto;
-    min-height: 80px;
-    
-}
+
 .header { 
     width: 100%;
     height: 90px;
@@ -58,7 +50,6 @@ header {
     font-weight: 400;
     font-size: 32px;
     letter-spacing: 0.06em;
-
     padding-bottom: 10px;
     transition: all 0.3s ease-in-out;
     color: #F1CDB3;
@@ -126,15 +117,13 @@ a {
 }
 
 .maine-start {
-    width: auto;
-    margin: 0;
-    display: flex;
-    padding-top: 150px;
+    margin: 0 auto;
     background: url(../img/start-screen-gradient-background.svg), radial-gradient(100% 900% at 0% 0%, #5b483a 0%, #262425 100%), linear-gradient(0deg, #211f20, #211f20);
     background-size: cover;
     font-family: "Arial", sans-serif;
     color: #FFFFFF;
     overflow: hidden;
+
 
 }
 
@@ -143,6 +132,8 @@ a {
     justify-content: space-evenly;
     width: auto;
     margin: 0 auto;
+    padding: 0px 40px 0px 40px;
+    margin: 90px 0px 0px 0px;
 }
 .not-only {
     font-family: "Georgia";
@@ -649,6 +640,40 @@ a {
     display: flex;
 }
 
+@media(max-width:920px) {
+    .start-srceen-container {
+        flex-wrap: wrap;
+        display: flex;
+        padding: 0 40px 0;
+        margin: 90px 0px 0px 0px;
+    }
+    .start-right-bar {
+        max-width: 310px;
+    }
+    .not-only {
+        margin: 0;
+        max-width: 310px;
+        font-size: 38px;
+        padding: 0px 5px 0px 5px;
+    }
+    .not-only-p {
+        width: 310px;
+        text-align: justify;
+        padding: 0px 30px 0px 5px;
+        margin: 20px 0px 0px 0px;
+    
+    }
+    .not-only-form {
+        position: relative;
+        top: 50px;
+    }
+    .not-only-link {
+        font-size: 28px;
+    }
+    .woody {
+        display: none;
+    }
+}
 
 @media(min-width:760px) {
     .bigMac-container {
@@ -656,7 +681,7 @@ a {
     }
     .menu_list {
         display: flex;
-    align-items: left;
+        align-items: left;
     
     }
 
@@ -777,9 +802,6 @@ a {
     }
     main {
         max-width: 768px;
-    }
-    .maine-start {
-        padding-top: 90px;
     }
     .start-srceen-container{
         display: flex;
@@ -997,9 +1019,9 @@ margin-top: 25px;
     }
     .maine-start {
         width: 100%;
-        padding: 60px 0px 0px 0px;
     }
     .start-srceen-container{
+        margin: 0;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -1019,29 +1041,29 @@ margin-top: 25px;
     padding: 0;
     }
     .not-only-p {
-        width: 80%;
         margin: 20px 0px 0px 0px;
         padding: 0px ;
         text-align:  revert;
     }
     .not-only-link {
-        font-size: 26px;
+        font-size: 22px;
+        margin: 0;
     }
     .start-left-bar {
         display: flex;
+        margin: 60px 0px 0px 0px;
     } 
-    .start-left-bar img {
+   /* .start-left-bar img {
         width: 80%;
         height: auto;
         margin: 0 auto;
-    }
+    }*/
     .maine-about {
         padding: 0px;
     }
     .about-pets {
-        width: 95%;
         padding: 25px;
-        margin: 80px 0px 80px 0px;
+        margin: 0px 0px 60px 0px
     }
 
      .abot-left-bar {
@@ -1126,6 +1148,7 @@ margin-top: 25px;
     .hepl-p{
         font-size: 14px;
     }
+
 .donat-container {
     width: 100%;
     display: flex;
@@ -1140,6 +1163,15 @@ margin-top: 25px;
     display: flex;
     justify-content: center;
 }
+
+.dotat-h3 {
+       font-size: 30px;
+       margin: 60px auto 0;
+}
+ .donat-text {
+    text-align: center;
+ }
+
 .dog-donat-img {
     width: 95%;
     text-align: center;
@@ -1154,6 +1186,7 @@ margin-top: 25px;
     height: auto;
     margin: 0 auto;
     padding: 10px 0px 10px 0px;
+    font-size: 16px;
 }
 .footer-container {
     display: flex;
@@ -1161,8 +1194,14 @@ margin-top: 25px;
     align-items: center;
     
 }
+
 .conatct-list {
     margin-top: 25px;
+}
+
+.contacts-h2,
+.location-h2 {
+    font-size: 28px;
 }
 .location {
    margin-top: 25px;
@@ -1177,6 +1216,13 @@ margin-top: 25px;
     .bigMac-container {
         padding: 30px 40px 30px 40px;
         width: 100%;
+    }
+    .header-logo-h2 {
+        font-size: 28px;
+        padding: 0;
+    }
+    .header-text-p {
+        font-size: 12px;
     }
     .menu_icon{
         z-index: 5;
@@ -1280,22 +1326,20 @@ margin-top: 25px;
     align-content: center;
     text-align: center;
     }
+
     .not-only {
-        font-size: 29px;
-        line-height: 40px;
-        width: auto;
-        padding: 0px 20px;
+        font-size: 28px;
+        line-height: 32px;
+        padding: 0px 30px;
     }
     .not-only-p {
-        width: 100%;
-        margin: 20px 0px 0px 0px;
-        padding: 0px 30px;
         text-align: left;
     }
+
     .not-only-form {
     height: fit-content;
     width: auto;
-    margin-top: 60px;
+    margin-top: 20px;
     }
     .not-only-link {
         font-size: 20px;
@@ -1326,6 +1370,7 @@ margin-top: 25px;
         padding: 10px;
         margin: 25px 0px 0px 0px;
        }
+
     .abot-left-bar{
     width: 100%;
     display: flex;
@@ -1335,18 +1380,17 @@ margin-top: 25px;
     margin-top: 30px;
     }
     .about-h1 {
-        font-size: 29px;
+        font-size: 26px;
         margin-bottom: 20px;
         line-height: 1.5;
     }
-    .about-p1{
+    .about-p1,
+    .abot-p2 {
         text-align: left;
-        padding-top: 25px;
-        padding-bottom: 25px;
-    }
-    .abot-p2{
+        font-size: 14px;
+        padding-left: 10px;
+        padding-right: 10px;
         line-height: 1.5;
-        text-align: left;
     }
     .shalter-hepl{
         max-width: 320px;
@@ -1370,7 +1414,7 @@ margin-top: 25px;
     .pets-griend-h3 {
         margin: 50px 0px 50px 0px;
         height: fit-content;
-        font-size: 26px;
+        font-size: 24px;
         padding: 0;
     }
     .slider {
@@ -1395,7 +1439,7 @@ margin-top: 25px;
        
     }
     .help-h3 {
-        font-size: 29px;
+        font-size: 26px;
     }
     .help-colum {
         margin: 0;
@@ -1419,8 +1463,9 @@ margin-top: 25px;
     align-items: center;
     padding: 0;
 }
-    .fooret-box{
+    .fooret-box {
         max-width: 320px;
+        padding: 0px;
     }
 
 .footer-container {
@@ -1448,7 +1493,7 @@ margin-top: 25px;
 }
 .dotat-h3 {
     width: auto;
-    font-size: 26px;
+    font-size: 24px;
     margin: 0;
     padding: 0px 32px
 }
@@ -1467,9 +1512,7 @@ margin-top: 25px;
 .conatct-list {
     margin-top: 25px;
 }
-.fooret-box {
-    padding: 0px 20px;
-}
+
 .footer-container {
     padding: 30px 0px 0px 0px;
 }
