--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ ul, li {
 .header { 
     width: 100%;
     height: 90px;
+    margin: 0px 0px 50px 0px;
+}
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 40px;
 }
 
 .bigMac-container {
@@ -39,7 +46,7 @@ ul, li {
     width: 100%;
     display: flex;
      align-items: center;
-    padding: 30px 0px 30px 0px;
+    padding: 30px 0px 0px 0px;
     text-align: center;
     justify-content: space-between;
     min-height: 70px;
@@ -63,7 +70,6 @@ ul, li {
 
 .header-text-p {
     margin: 0;
-
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
@@ -130,12 +136,16 @@ a {
 /*not only section*/
 .start-srceen-container { 
     display: flex;
-    justify-content: space-evenly;
-    width: auto;
+    justify-content:space-between;
     margin: 0 auto;
-    padding: 0px 40px 0px 40px;
-    margin: 90px 0px 0px 0px;
+    padding: 70px 40px 0px 40px;
+   
 }
+
+.start-right-bar {
+    max-width: 460px;
+}
+
 .not-only {
     font-family: "Georgia";
     font-style: normal;
@@ -703,7 +713,64 @@ a {
   }
   /*caroesel end*/
 
+  @media(max-width:1199px) {
+
+    .pets__wrapper {
+        grid-gap: 0 20px;
+      }
+
+    .carousel {
+        display: flex;
+        left: -580px;
+        position: relative;
+      }
+    
+      .item,
+      .pets__wrapper {
+        width: 580px;
+      }
+    
+      .carousel-wrapper {
+        max-width: 580px;
+        margin: 0 auto;
+      }
+    
+      @keyframes move-right {
+        from {
+          left: -580px;
+        }
+        to {
+          left: -1160px;
+        }
+      }
+    
+      .transition-right {
+        animation-name: move-right;
+        animation-duration: 1s;
+      }
+    
+      @keyframes move-left {
+        from {
+          left: -580px;
+        }
+        to {
+          left: 0px;
+        }
+      }
+    
+      .pets__wrapper {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    
+      .pets__wrapper .pets__card:last-child {
+        display: none;
+      }
+
+  }
+
+
   /*920px*/
+
 @media(max-width:920px) {
     .start-srceen-container {
         display: flex;
@@ -808,9 +875,9 @@ a {
     }
 }
 
-@media(min-width:760px) {
+@media(min-width:768px) {
     .bigMac-container {
-        padding: 30px 40px 30px 40px;
+        padding: 30px 0px 0px 0px;
     }
 
     .menu_list {
@@ -827,7 +894,7 @@ a {
     }
 }
 
-@media(max-width:758px) {
+@media(max-width:768px) {
     .header-box {
         max-width: 768px;
         }
@@ -838,7 +905,7 @@ a {
         }
 
     .bigMac-container {
-        padding: 30px 40px 30px 40px;
+        padding: 30px 0px 0px 0px;
         width: 100%;
     }
 
