fix: fixed scroll body in burger menu

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body {
     overflow-x: hidden;
 }
 
+body._lock {
+    overflow: hidden;
+}
+
 ul, li {
     list-style: none;
     text-align: left;
