--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -15,6 +15,9 @@ html, body {
     font-size: 16px;
     font-family: "Georgia";
 }
+body._lock {
+    overflow: hidden;
+}
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
