--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -823,28 +823,35 @@ margin-top: 25px;
     .menu-link {
         font-size: 22px;
     }
-.our-pets {
-    width: 100%;
-}
-.kit-pets{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.footer-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.conatct-list {
+    .our-pets {
+        width: 100%;
+    }
+    .kit-pets{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contacts-h2 {
+        font-size: 30px;
+    }
+
+    .conatct-list {
+        margin-top: 25px;
+    }
+    .location {
     margin-top: 25px;
-}
-.location {
-   margin-top: 25px;
-}
-.fotter-puppe {
-margin-top: 25px;
-}
+    }
+    .location-h2 {
+        font-size: 30px;
+    }
+    .fotter-puppe {
+    margin-top: 25px;
+    }
 }
 
 
